--- a/0x06-unittests_in_js/package.json
+++ b/0x06-unittests_in_js/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "0x06-unittests_in_js",
+  "name": "8-api",
   "version": "1.0.0",
-  "description": "This project is a hands-on journey into unit testing, integration testing, and test-driven development (TDD) in JavaScript. Here’s what one could learn and demonstrate to a technical recruiter:",
-  "main": "0-calcul.js",
-  "dependencies": {},
-  "devDependencies": {
-    "mocha": "^10.8.2"
-  },
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "./node_modules/mocha/bin/mocha"
   },
-  "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.2.2",
+    "request": "^2.88.0",
+    "sinon": "^7.5.0"
+  }
 }
